--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,7 +16,11 @@
 
 
 //COMPONENTS
+@import "COMPONENTS/_header.scss";
+@import "COMPONENTS/_hover.scss";
+@import "COMPONENTS/_information.scss";
+@import "COMPONENTS/_intro.scss";
+@import "COMPONENTS/_menu.scss";
 @import "COMPONENTS/_slider.scss";
-
 
 //MODULES
