--- a/src/views/pages/index.njk
+++ b/src/views/pages/index.njk
@@ -9,12 +9,19 @@
 {% extends "layout.njk" %}
 
 {% block header %}
+
     {# HEADER #}
     {% include "modules/m-header.njk" %}
+
 {% endblock %}
 
-    
+
 {% block content %}
+
     {# SLIDER #}
     {% include "modules/m-slider.njk" %}
+
+    {# INFORMATION #}
+    {% include "modules/m-information.njk" %}
+
 {% endblock %}
