--- a/src/views/templates/layout.njk
+++ b/src/views/templates/layout.njk
@@ -11,6 +11,7 @@
    <meta charset="UTF-8">
    <title>Offshore Studio</title>
    <link rel="stylesheet" href="assets/css/main.css">
+   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no">
  </head>
  <body>
 
@@ -18,9 +19,15 @@
          {% block header %}{% endblock %}
      </header>
 
+     <div class="intro-cover"></div>
+
+
      <main>
          {% block content %}{% endblock %}
      </main>
+
+     <div class="text-hover js-text-hover"></div>
+
 
 
      {# JS #}
