--- a/src/scss/settings/_colors.scss
+++ b/src/scss/settings/_colors.scss
@@ -7,3 +7,14 @@ $light-gray:  rgb(222, 222, 222);
 $white:       rgb(255, 255, 255);
 $black:       rgb(0, 0, 0);
 $blue:        rgb(104, 139, 196);
+
+
+$header-background: $white;
+$border-color: $black;
+
+$background: $black;
+$information-background: $white;
+
+
+$text-color: $black;
+$carousel-counter-color: $white;
